{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 61,
  "lineage": "273f1884-3eb8-2929-ab75-8c81ab5fd8fd",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet_databricks",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.40.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "32f30d6d-d472-4608-99d1-995f680edad0",
            "id": "/subscriptions/70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485/resourceGroups/rg-databricks-prod-uks-01/providers/Microsoft.Network/virtualNetworks/vnet-databricks-prod",
            "location": "uksouth",
            "name": "vnet-databricks-prod",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "rg-databricks-prod-uks-01",
            "subnet": [
              {
                "address_prefixes": [
                  "10.40.10.0/24"
                ],
                "default_outbound_access_enabled": true,
                "delegation": [
                  {
                    "name": "databricks-delegation",
                    "service_delegation": [
                      {
                        "actions": [
                          "Microsoft.Network/virtualNetworks/subnets/join/action",
                          "Microsoft.Network/virtualNetworks/subnets/prepareNetworkPolicies/action",
                          "Microsoft.Network/virtualNetworks/subnets/unprepareNetworkPolicies/action"
                        ],
                        "name": "Microsoft.Databricks/workspaces"
                      }
                    ]
                  }
                ],
                "id": "/subscriptions/70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485/resourceGroups/rg-databricks-prod-uks-01/providers/Microsoft.Network/virtualNetworks/vnet-databricks-prod/subnets/snet-databricks-public-10.40.10.0_24",
                "name": "snet-databricks-public-10.40.10.0_24",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485/resourceGroups/rg-databricks-prod-uks-01/providers/Microsoft.Network/networkSecurityGroups/nsg-databricks-public"
              },
              {
                "address_prefixes": [
                  "10.40.11.0/24"
                ],
                "default_outbound_access_enabled": true,
                "delegation": [
                  {
                    "name": "databricks-delegation",
                    "service_delegation": [
                      {
                        "actions": [
                          "Microsoft.Network/virtualNetworks/subnets/join/action",
                          "Microsoft.Network/virtualNetworks/subnets/prepareNetworkPolicies/action",
                          "Microsoft.Network/virtualNetworks/subnets/unprepareNetworkPolicies/action"
                        ],
                        "name": "Microsoft.Databricks/workspaces"
                      }
                    ]
                  }
                ],
                "id": "/subscriptions/70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485/resourceGroups/rg-databricks-prod-uks-01/providers/Microsoft.Network/virtualNetworks/vnet-databricks-prod/subnets/snet-databricks-private-10.40.11.0_24",
                "name": "snet-databricks-private-10.40.11.0_24",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485/resourceGroups/rg-databricks-prod-uks-01/providers/Microsoft.Network/networkSecurityGroups/nsg-databricks-private"
              },
              {
                "address_prefixes": [
                  "10.40.12.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485/resourceGroups/rg-databricks-prod-uks-01/providers/Microsoft.Network/virtualNetworks/vnet-databricks-prod/subnets/snet-databricks-pep",
                "name": "snet-databricks-pep",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vnet-databricks-prod",
            "resource_group_name": "rg-databricks-prod-uks-01",
            "subscription_id": "70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485"
          },
          "dependencies": [
            "data.azurerm_resource_group.rg_databricks"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "private_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485/resourceGroups/rg-databricks-prod-uks-01/providers/Microsoft.Network/networkSecurityGroups/nsg-databricks-private",
            "location": "uksouth",
            "name": "nsg-databricks-private",
            "resource_group_name": "rg-databricks-prod-uks-01",
            "security_rule": [
              {
                "access": "Allow",
                "description": "Required for worker communication with Azure Eventhub services.",
                "destination_address_prefix": "EventHub",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "9093",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-eventhub",
                "priority": 104,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for worker nodes communication within a cluster.",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-worker-inbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for worker nodes communication within a cluster.",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-worker-outbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for workers communication with Azure SQL services.",
                "destination_address_prefix": "Sql",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-sql",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for workers communication with Azure Storage services.",
                "destination_address_prefix": "Storage",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-storage",
                "priority": 103,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for workers communication with Databricks control plane.",
                "destination_address_prefix": "AzureDatabricks",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "3306",
                  "443",
                  "8443-8451"
                ],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-databricks-webapp",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-databricks-private",
            "resource_group_name": "rg-databricks-prod-uks-01",
            "subscription_id": "70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485"
          },
          "dependencies": [
            "data.azurerm_resource_group.rg_databricks"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "public_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485/resourceGroups/rg-databricks-prod-uks-01/providers/Microsoft.Network/networkSecurityGroups/nsg-databricks-public",
            "location": "uksouth",
            "name": "nsg-databricks-public",
            "resource_group_name": "rg-databricks-prod-uks-01",
            "security_rule": [
              {
                "access": "Allow",
                "description": "Required for worker communication with Azure Eventhub services.",
                "destination_address_prefix": "EventHub",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "9093",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-eventhub",
                "priority": 104,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for worker nodes communication within a cluster.",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-worker-inbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for worker nodes communication within a cluster.",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-worker-outbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for workers communication with Azure SQL services.",
                "destination_address_prefix": "Sql",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-sql",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for workers communication with Azure Storage services.",
                "destination_address_prefix": "Storage",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-storage",
                "priority": 103,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for workers communication with Databricks control plane.",
                "destination_address_prefix": "AzureDatabricks",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "3306",
                  "443",
                  "8443-8451"
                ],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-databricks-webapp",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-databricks-public",
            "resource_group_name": "rg-databricks-prod-uks-01",
            "subscription_id": "70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485"
          },
          "dependencies": [
            "data.azurerm_resource_group.rg_databricks"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "databricks_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.40.11.0/24"
            ],
            "default_outbound_access_enabled": true,
            "delegation": [
              {
                "name": "databricks-delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/action"
                    ],
                    "name": "Microsoft.Databricks/workspaces"
                  }
                ]
              }
            ],
            "id": "/subscriptions/70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485/resourceGroups/rg-databricks-prod-uks-01/providers/Microsoft.Network/virtualNetworks/vnet-databricks-prod/subnets/snet-databricks-private-10.40.11.0_24",
            "name": "snet-databricks-private-10.40.11.0_24",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-databricks-prod-uks-01",
            "virtual_network_name": "vnet-databricks-prod"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "snet-databricks-private-10.40.11.0_24",
            "resource_group_name": "rg-databricks-prod-uks-01",
            "subscription_id": "70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485",
            "virtual_network_name": "vnet-databricks-prod"
          },
          "dependencies": [
            "azurerm_virtual_network.vnet_databricks",
            "data.azurerm_resource_group.rg_databricks"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "databricks_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.40.10.0/24"
            ],
            "default_outbound_access_enabled": true,
            "delegation": [
              {
                "name": "databricks-delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/action"
                    ],
                    "name": "Microsoft.Databricks/workspaces"
                  }
                ]
              }
            ],
            "id": "/subscriptions/70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485/resourceGroups/rg-databricks-prod-uks-01/providers/Microsoft.Network/virtualNetworks/vnet-databricks-prod/subnets/snet-databricks-public-10.40.10.0_24",
            "name": "snet-databricks-public-10.40.10.0_24",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-databricks-prod-uks-01",
            "virtual_network_name": "vnet-databricks-prod"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "snet-databricks-public-10.40.10.0_24",
            "resource_group_name": "rg-databricks-prod-uks-01",
            "subscription_id": "70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485",
            "virtual_network_name": "vnet-databricks-prod"
          },
          "dependencies": [
            "azurerm_virtual_network.vnet_databricks",
            "data.azurerm_resource_group.rg_databricks"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "pep_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.40.12.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485/resourceGroups/rg-databricks-prod-uks-01/providers/Microsoft.Network/virtualNetworks/vnet-databricks-prod/subnets/snet-databricks-pep",
            "name": "snet-databricks-pep",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-databricks-prod-uks-01",
            "virtual_network_name": "vnet-databricks-prod"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "snet-databricks-pep",
            "resource_group_name": "rg-databricks-prod-uks-01",
            "subscription_id": "70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485",
            "virtual_network_name": "vnet-databricks-prod"
          },
          "dependencies": [
            "azurerm_virtual_network.vnet_databricks",
            "data.azurerm_resource_group.rg_databricks"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "private_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485/resourceGroups/rg-databricks-prod-uks-01/providers/Microsoft.Network/virtualNetworks/vnet-databricks-prod/subnets/snet-databricks-private-10.40.11.0_24",
            "network_security_group_id": "/subscriptions/70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485/resourceGroups/rg-databricks-prod-uks-01/providers/Microsoft.Network/networkSecurityGroups/nsg-databricks-private",
            "subnet_id": "/subscriptions/70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485/resourceGroups/rg-databricks-prod-uks-01/providers/Microsoft.Network/virtualNetworks/vnet-databricks-prod/subnets/snet-databricks-private-10.40.11.0_24"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_virtual_network.vnet_databricks",
            "data.azurerm_resource_group.rg_databricks",
            "module.network.azurerm_network_security_group.private_nsg",
            "module.network.azurerm_subnet.databricks_private"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "public_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485/resourceGroups/rg-databricks-prod-uks-01/providers/Microsoft.Network/virtualNetworks/vnet-databricks-prod/subnets/snet-databricks-public-10.40.10.0_24",
            "network_security_group_id": "/subscriptions/70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485/resourceGroups/rg-databricks-prod-uks-01/providers/Microsoft.Network/networkSecurityGroups/nsg-databricks-public",
            "subnet_id": "/subscriptions/70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485/resourceGroups/rg-databricks-prod-uks-01/providers/Microsoft.Network/virtualNetworks/vnet-databricks-prod/subnets/snet-databricks-public-10.40.10.0_24"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_virtual_network.vnet_databricks",
            "data.azurerm_resource_group.rg_databricks",
            "module.network.azurerm_network_security_group.public_nsg",
            "module.network.azurerm_subnet.databricks_public"
          ]
        }
      ]
    }
  ]
}